Added box shadows with negative x offset

--- a/card.css
+++ b/card.css
@@ -19,4 +19,7 @@ body {
   width: 400px;
   min-width: 250px;
   padding: 1.5rem;
+  border-radius: 16px;
+  background: #17141d;
+  box-shadow: -1rem 0 3rem #000;
 }
