Added background gradient effect to card text

--- a/card.css
+++ b/card.css
@@ -72,7 +72,7 @@ body {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  filter: grayscale(100%);
+  /* filter: grayscale(100%); */
   margin: 16px 10px;
 }
 
@@ -88,4 +88,17 @@ body {
   stroke-linecap: round;
 }
 
+.author-name-prefix {
+  font-style: normal;
+  font-weight: 700;
+  color: #7a7a8c;
+  font-size: small;
+}
 
+.card-header h2:hover {
+  background: linear-gradient(90deg, #ff8a00, #e52e71);
+  text-shadow: none;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
