--- a/card.css
+++ b/card.css
@@ -102,3 +102,24 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+footer {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+  font-size: small;
+  font-weight: 700;
+}
+
+.church-logo {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
+.church-logo img {
+  display: block;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
