--- a/card.css
+++ b/card.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
 body {
   padding: 0;
   margin: 0;
